--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ h2{
     text-align: center;
 }
 
-.card .fake-button{
+.card .style-button{
     display: inline-block;
     padding: 10px;
     border: 1px solid black;
